ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/add-base-url: "true"
    # kubernetes.io/ingress.class: "nginx"
    # kubernetes.io/ingress.class: alb
  labels:
    app: nginx-ingress
spec:
  rules:
  - host: <placeholder>
    http:
      paths:
      - path: /
        backend:
          serviceName: api
          servicePort: 8000
